raw: fixing animation bugs
-Fixing an issue that the screen overflows during animations
-Fixing some alerts related to performance and accessibility

--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,10 @@
   margin: 0;
   background-color: var(--body_bg);
   color: var(--body_color);
-  overflow: hidden;
 }
 
 main {
-  min-height: 100dvh;
+  min-height: 90dvh;
   width: 100dvw;
   text-align: center;
   display: flex;
